--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,7 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
+    //Kotlinx.collections
+    implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5"
+
 }
